# weather-bot

./: .gitignore  DataHandler.py  Draw.py  Graph.py  api_codes.csv  data.csv  explore.ipynb  fetch.py  icon_lookup.json  icon_scrape.ipynb  icons.ipynb  main.py  mock_epd.py  output.html  pyproject.toml  sample_data.json  save_data.py  weather-dash.service  weather.duckdb  weather_dashboard.py
